--- a/chatbot-frontend/src/app/components/chatbot-verified/chatbot-verified.component.html
+++ b/chatbot-frontend/src/app/components/chatbot-verified/chatbot-verified.component.html
@@ -1,25 +1,70 @@
-<div class="chat-container">
-    <div #scrollframe class="message-container">
-      <div *ngFor="let msg of messages; trackBy: trackByMessageId" class="message" [ngClass]="{'user-message': msg.sender === 'USER', 'assistant-message': msg.sender === 'ASSISTANT'}">
-        <img *ngIf="msg.sender === 'USER'" [src]="userPath" alt="User" class="avatar">
-        <img *ngIf="msg.sender === 'ASSISTANT'" [src]="avatarPath" alt="Assistant" class="avatar">
-        <div class="message-content">
-          <p>{{msg.content}}</p>
+<body>
+  <div class="chat-container">
+    <div class="chat-header">
+      <div class="header-left">
+        <div class="avatar" [ngStyle]="{'background-image': 'url(' + avatarPath + ')'}">
+          <span class="status-indicator"></span>
         </div>
+        <span class="assistant-name">Segreteria</span>
+      </div>
+      <button class="delete-button" mat-raised-button color="warn" (click)="openConfirmDeleteDialog()">
+        <span class="material-icons">delete</span>
+      </button>
+    </div>
+
+    <section class="message-panel-container" #scrollframe>
+      <ng-container *ngIf="messages.length; else noMessages">
+        <ng-container *ngFor="let message of messages; trackBy: trackByMessageId">
+          <div [ngClass]="{'message-inner-container': true, 'user-message': message.sender === 'user', 'assistant-message': message.sender === 'assistant'}">
+            <div class="message-container">
+              <div *ngIf="message.sender === 'assistant'" class="avatar" [ngStyle]="{'background-image': 'url(' + avatarPath + ')'}"></div>
+              <div class="message">{{ message.content }}</div>
+              <div *ngIf="message.sender === 'user'" class="avatar" [ngStyle]="{'background-image': 'url(' + userPath + ')'}"></div>
+            </div>
+          </div>
+        </ng-container>
+      </ng-container>
+      <ng-template #noMessages>
+        <div class="no-message-container">Nessun messaggio</div>
+      </ng-template>
+
+      <div *ngIf="loading" class="loading-icon">
+        <img src="../../assets/loading.svg" width="70" />
+      </div>
+
+      <audio #audio src="https://assets.mixkit.co/active_storage/sfx/2358/2358-preview.mp3"></audio>
+      <audio #audioToggle src="https://assets.mixkit.co/active_storage/sfx/2925/2925-preview.mp3"></audio>
+    </section>
+
+    <section class="user-input-container">
+      <input
+        class="input-textfield"
+        [(ngModel)]="message"
+        placeholder="Di che informazione hai bisogno?"
+        type="text"
+        (keyup)="onKeyUp($event)"
+      />
+      <button class="button" (click)="sendMessage()">
+        <span class="material-symbols-outlined">send</span>
+      </button>
+    </section>
+  </div>
+
+  <ng-template #confirmDeleteDialog>
+    <div class="confirm-delete-dialog">
+      <div class="dialog-header">
+        <span class="material-icons warning-icon">warning</span>
+        <h2>Conferma Eliminazione</h2>
+      </div>
+      <p>Sei sicuro di voler eliminare la chat?</p>
+      <div class="dialog-actions">
+        <button mat-raised-button color="warn" (click)="confirmDelete()">
+          <span class="material-icons">delete</span> Si
+        </button>
+        <button mat-raised-button (click)="closeDialog()">
+          <span class="material-icons">cancel</span> No
+        </button>
       </div>
     </div>
-    <div class="input-container">
-      <input [(ngModel)]="message" (keyup)="onKeyUp($event)" placeholder="Type your message...">
-      <button (click)="sendMessage()">Send</button>
-    </div>
-  </div>
-  
-  <ng-template #confirmDeleteDialog>
-    <h1 mat-dialog-title>Confirm Deletion</h1>
-    <div mat-dialog-content>Are you sure you want to delete all messages?</div>
-    <div mat-dialog-actions>
-      <button mat-button (click)="closeDialog()">No</button>
-      <button mat-button (click)="confirmDelete()">Yes</button>
-    </div>
   </ng-template>
-  
+</body>
