--- a/chatbot-frontend/src/app/components/admin-section-choice/admin-section-choice.component.scss
+++ b/chatbot-frontend/src/app/components/admin-section-choice/admin-section-choice.component.scss
@@ -3,7 +3,7 @@ $secondary-color: #FF9800;
 $hover-color: #f1f1f1;
 $border-radius: 15px;
 
-.chat-choice-container {
+.admin-section-choice-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,14 +23,14 @@ $border-radius: 15px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
 
-  .chat-options {
+  .section-options {
     display: flex;
     justify-content: space-around;
     width: 100%;
     max-width: 1000px;
   }
 
-  .chat-option {
+  .section-option {
     background: rgba(255, 255, 255, 0.8);
     border: 1px solid transparent;
     border-radius: $border-radius;
