--- a/chatbot-frontend/src/app/components/header/header.component.html
+++ b/chatbot-frontend/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <img src="../../assets/logo.png" alt="Logo" class="logo" />
   </div>
   <div class="icons-container">
-    <button mat-icon-button (click)="onChatbotClick()">
+    <button class="chat-button" (click)="onChatbotClick()">
       <fa-icon [icon]="faCommentDots"></fa-icon>
     </button>
     <div class="dropdown">
