--- a/chatbot-frontend/src/app/components/register/register.component.html
+++ b/chatbot-frontend/src/app/components/register/register.component.html
@@ -1,60 +1,57 @@
 <div class="register-container">
-    <div class="header">
-      <h1>Registrati</h1>
-      <p>Crea subito un account per iniziare a chattare!</p>
-    </div>
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-      <div class="row">
-        <div>
-          <label for="first_name">Nome</label>
-          <input id="first_name" formControlName="first_name" type="text" placeholder="es. Mario" required>
-          <div *ngIf="registerForm.get('first_name')?.invalid && registerForm.get('first_name')?.touched" class="error">
-            Inserisci il tuo nome
-          </div>
-        </div>
-        <div>
-          <label for="last_name">Cognome</label>
-          <input id="last_name" formControlName="last_name" type="text" placeholder="es. Rossi" required>
-          <div *ngIf="registerForm.get('last_name')?.invalid && registerForm.get('last_name')?.touched" class="error">
-            Inserisci il tuo cognome
-          </div>
-        </div>
-      </div>
-      <div class="row single">
-        <div>
-          <label for="email">Email</label>
-          <input id="email" formControlName="email" type="email" placeholder="es. mario.rossi@gmail.com" required>
-          <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched" class="error">
-            Inserisci un'e-mail valida
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div>
-          <label for="username">Username</label>
-          <input id="username" formControlName="username" type="text" placeholder="es. mario.rossi" required>
-          <div *ngIf="registerForm.get('username')?.invalid && registerForm.get('username')?.touched" class="error">
-            Inserisci un username
-          </div>
-        </div>
-        <div>
-          <label for="password">Password</label>
-          <input id="password" formControlName="password" type="password" placeholder="La tua password" required>
-          <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched" class="error">
-            Inserisci una password
-          </div>
+  <div class="header">
+    <h1>Registrati</h1>
+    <p>Crea subito un account per iniziare a chattare!</p>
+  </div>
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <div class="row">
+      <div>
+        <label for="first_name">Nome</label>
+        <input id="first_name" formControlName="first_name" type="text" placeholder="es. Mario" required>
+        <div *ngIf="registerForm.get('first_name')?.invalid && registerForm.get('first_name')?.touched" class="error">
+          Inserisci il tuo nome
         </div>
       </div>
       <div>
-        <div>
-          <button class="register-button" type="submit" [disabled]="loading">
-            <span>✍ Registrati</span>
-          </button>
+        <label for="last_name">Cognome</label>
+        <input id="last_name" formControlName="last_name" type="text" placeholder="es. Rossi" required>
+        <div *ngIf="registerForm.get('last_name')?.invalid && registerForm.get('last_name')?.touched" class="error">
+          Inserisci il tuo cognome
         </div>
       </div>
-      <div *ngIf="error" class="error">
-        {{ error }}
+    </div>
+    <div class="row">
+      <div>
+        <label for="email">Email</label>
+        <input id="email" formControlName="email" type="email" placeholder="es. mario.rossi@gmail.com" required>
+        <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched" class="error">
+          Inserisci un'e-mail valida
+        </div>
       </div>
-    </form>
-  </div>
-  
+    </div>
+    <div class="row">
+      <div>
+        <label for="username">Username</label>
+        <input id="username" formControlName="username" type="text" placeholder="es. mario.rossi" required>
+        <div *ngIf="registerForm.get('username')?.invalid && registerForm.get('username')?.touched" class="error">
+          Inserisci un username
+        </div>
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input id="password" formControlName="password" type="password" placeholder="La tua password" required>
+        <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched" class="error">
+          Inserisci una password
+        </div>
+      </div>
+    </div>
+    <div>
+      <div>
+        <button class="register-button" type="submit" [disabled]="loading">
+          <span *ngIf="!loading">✍ Registrati</span>
+          <mat-spinner *ngIf="loading" diameter="20"></mat-spinner>
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
